--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,51 @@
+attr==0.3.2
+chromadb==0.5.4
+ConfigParser==7.0.0
+contextlib2==21.6.0
+cryptography==42.0.8
+docutils==0.21.2
+faiss_cpu==1.8.0.post1
+filelock==3.15.4
+fitz==0.0.1.dev2
+HTMLParser==0.0.2
+huggingface_hub==0.23.3
+huggingface_hub==0.24.0
+importlib_metadata==6.11.0
+importlib_metadata==7.1.0
+importlib_metadata==8.0.0
+ipython==8.24.0
+ipython==8.12.3
+ipywidgets==8.1.3
+Jinja2==3.1.4
+jnius==1.1.0
+keyring==25.2.1
+langchain==0.2.11
+langchain_community==0.2.10
+langchain_core==0.2.24
+langchain_huggingface==0.0.3
+llama_index==0.10.58
+llama_parse==0.4.9
+mock==5.1.0
+nest_asyncio==1.6.0
+Pillow==10.4.0
+protobuf==5.27.2
+pymupdf==1.24.9
+pyOpenSSL==24.2.1
+pypdf==4.3.1
+qdrant_client==1.10.1
+railroad==0.5.0
+redis==5.0.7
+sentence_transformers==3.0.1
+Sphinx==8.0.0
+streamlit==1.36.0
+thread==2.0.5
+torch==2.3.1
+tornado==6.4
+tornado==6.4.1
+transformers==4.42.4
+unstructured_inference==0.7.36
+urllib3_secure_extra==0.1.0
+xmlrpclib==1.0.1
+~ransformers==4.36.2
+~treamlit==1.36.0
 
